--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,26 @@ fieldset {
   border: 0;
 }
 
+.error-popup {
+  position: absolute;
+  z-index: 100;
+  left: 50%;
+  top: 25%;
+
+  min-width: 500px;
+  min-height: 150px;
+  margin-left: -250px;
+  margin-top: -25px;
+
+  background-color: #ffffff;
+  box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.7);
+  color: #000000;
+}
+
+.error-popup p {
+  text-align: center;
+}
+
 
 /* Map */
 
