--- a/css/style.css
+++ b/css/style.css
@@ -78,15 +78,15 @@ fieldset {
 }
 
 .error-popup {
-  position: absolute;
+  position: fixed;
   z-index: 100;
   left: 50%;
-  top: 25%;
+  top: 50%;
 
   min-width: 500px;
   min-height: 150px;
   margin-left: -250px;
-  margin-top: -25px;
+  margin-top: -75px;
 
   background-color: #ffffff;
   box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.7);
